fix: verwijder onnodige p tags

--- a/index.html
+++ b/index.html
@@ -1,69 +1,71 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <title>Moshe website</title>
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Moshe website</title>
-</head>
-
-<body>
-  <table cellspacing="20">
-    <tr>
-    <td><img src="Moshe-modified.png" alt="Afbeelding niet geladen"></td>
-    <td><h1>Moshe</h1>
-    <p><em>Account Executive Ilionx & Founder Auto Atlas</em></p>
-    <p><em>Ik ben <strong>accountexecutive</strong> bij Ilionx en <strong>eigenaar</strong> van auto atlas</em>
-    </p></td>
-    </tr>
-  </table>
-  <hr />
-  <h3>Boeken & lessen</h3>
-  <p>Ik heb op de volgende scholen gezeten:
-  <ul>
-    <li>Het nieuwe lyceum</li>
-    <li>pad ach</li>
-  </ul>
-<hr />
-  </p>
-  <h3>My hobbies</h3>
-  <ol>
-    <li> <a href="https://www.tautenburg.nl/">Tennissen</a></li>
-    <li> Fietsen</li>
-    <li> etc.</li>
-  </ol>
-  <p><a href="contactgegevens.html">Mijn contactgegevens tref je hier</a></p>
-  <table>
-    <thead>
-      <th>Dates</th>
-      <th>Functie</th>
-    </thead>
-    <tr>
-      <td>2023</td>
-      <td>Accountmanager</td>
-    </tr>
-  </table>
-<hr />
-  <p>
+  <body>
+    <table cellspacing="20">
+      <tr>
+        <td>
+          <img src="Moshe-modified.png" alt="Afbeelding niet geladen" />
+        </td>
+        <td>
+          <h1>Moshe</h1>
+          <p><em>Account Executive Ilionx & Founder Auto Atlas</em></p>
+          <p>
+            <em
+              >Ik ben <strong>accountexecutive</strong> bij Ilionx en
+              <strong>eigenaar</strong> van auto atlas</em
+            >
+          </p>
+        </td>
+      </tr>
+    </table>
+    <hr />
+    <h3>Boeken & lessen</h3>
+    <p>Ik heb op de volgende scholen gezeten:</p>
+    <ul>
+      <li>Het nieuwe lyceum</li>
+      <li>pad ach</li>
+    </ul>
+    <hr />
+    <h3>My hobbies</h3>
+    <ol>
+      <li><a href="https://www.tautenburg.nl/">Tennissen</a></li>
+      <li>Fietsen</li>
+      <li>etc.</li>
+    </ol>
+    <a href="contactgegevens.html">Mijn contactgegevens tref je hier</a>
+    <table>
+      <thead>
+        <th>Dates</th>
+        <th>Functie</th>
+      </thead>
+      <tr>
+        <td>2023</td>
+        <td>Accountmanager</td>
+      </tr>
+    </table>
+    <hr />
     <h3>Skills</h3>
     <table cellspacing="10">
       <tr>
         <td>Sales &#11088;&#11088;&#11088;</td>
-        <td>Marketing &#11088;&#11088;&#11088; </td>
+        <td>Marketing &#11088;&#11088;&#11088;</td>
       </tr>
       <td>Ondernemen &#11088;&#11088;&#11088;&#11088;&#11088;&#11088;</td>
       <td>Communicatie &#11088;&#11088;&#11088;&#11088;&#11088;&#11088;</td>
     </table>
-  </p>
-  <p>
     <form class="" action="mailto:info@autoatlas.nl" method="post">
       <label> Voornaam </label>
-        <input type="text" name="" value=""><br>
+      <input type="text" name="" value="" /><br />
       <label> Achternaam </label>
-          <input type="text" name="" value=""><br>
+      <input type="text" name="" value="" /><br />
       <label> Datum </label>
-      <input type="date" name="" value=""><br>
-      <input type="submit" name="" value="submit">
+      <input type="date" name="" value="" /><br />
+      <input type="submit" name="" value="submit" />
     </form>
-  </p>
-</body>
+  </body>
 </html>
