--- a/Contactgegevens.html
+++ b/Contactgegevens.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="nl" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Mijn contactgegevens</title>
   </head>
   <body>
